# ds-projects

./: .gitignore  404.html  README.md  data.dvc  index.html  mkdocs.yml  pyproject.toml  settings.toml  sitemap.xml  test.sh
.github/workflows/: ci.yml
config/: __init__.py  enviroment.py  enviroment.toml
docs/: index.md
notebooks/eda/: base_guide.ipynb
search/: search_index.json
src/: cli.py  config.py
